--- a/main.html
+++ b/main.html
@@ -7,6 +7,20 @@
 </head>
 
 <body>
+	<h1>My Playlist</h1>
+	<div>
+		<ul>
+			<li>Song 1</li>
+			<li>Song 1</li>
+			<li>Song 1</li>
+			<li>Song 1</li>
+			<li>Song 1</li>
+		</ul>
+	</div>
+	<h2>Now Playing...</h2>
+	<div id="div">
+		<video src="https://www.w3schools.com/tags/movie.mp4" controls></video>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
